Fix code line-breaking with whitespace-pre

--- a/assets/index.css
+++ b/assets/index.css
@@ -163,7 +163,7 @@
 
   code,
   pre code {
-    @apply bg-gray-50 border border-gray-200 overflow-y-auto py-1 px-2 rounded text-sm max-w-full whitespace-nowrap;
+    @apply bg-gray-50 border border-gray-200 break-words overflow-y-auto py-1 px-2 rounded text-sm max-w-full whitespace-pre;
     box-decoration-break: clone;
   }
 
